optimize compiling